mejora al antadir ranking por codigo

--- a/src/app/user-ranking-dev/user-ranking-dev.component.css
+++ b/src/app/user-ranking-dev/user-ranking-dev.component.css
@@ -8,6 +8,10 @@ font: 732 47px/33px Roboto !important;
 
 }
 
+.ranking-img{
+    max-height: 7rem;
+}
+
 .btn{
 background-color: var(--corp-color-one);
 border-color: var(--corp-color-two);
