Cambiando metodo addButton a push

--- a/src/app/chips/chips.component.html
+++ b/src/app/chips/chips.component.html
@@ -10,7 +10,7 @@
       <button
         [disabled]="addEmailForm.invalid"
         class="btn btn-sm btn-outline-color"
-        (click)="addButton()"
+        (click)="push()"
         type="button"
       >
         Añadir
