--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -79,7 +79,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link text-light btn-nav" (click)="logout()" routerLink="/login"  >
-            <i class="icon-lg bi bi-lock-fill"
+            <i class="icon-lg bi gg-log-off "
             [ngxTippy]="'Salir'"
             [tippyProps]="{
             arrow: false,
