--- a/src/app/user-ranking-dev/user-ranking-dev.component.css
+++ b/src/app/user-ranking-dev/user-ranking-dev.component.css
@@ -1,4 +1,8 @@
 
+.component-container{
+  overflow: hidden;
+}
+
 .sideTitle{
 margin-top:3.1rem;
 margin-bottom:1rem;
@@ -6,6 +10,11 @@ margin-left: 3rem;
 color: var(--corp-color-one);
 font: 732 47px/33px Roboto !important;
 
+
+}
+
+.ranking-container{
+  height: 43% !important;
 }
 
 .ranking-img{
@@ -21,16 +30,17 @@ margin-left:1rem;
   top: 8rem ;
   z-index: 1;
   max-width: 100%;
-  height: 55rem;
+  height: 40rem;
   overflow:scroll;
 }
 .ranking-card {
 }
 
 .ranking {
-  width: 80rem;
-  height: 65rem;
-  margin-top: 5rem;
+  width: 75rem;
+  height: 34rem;
+  margin-right: 1rem;
+  margin-top: 1rem;
   
 }
 
