--- a/src/app/user-ranking-dev/user-ranking-dev.component.html
+++ b/src/app/user-ranking-dev/user-ranking-dev.component.html
@@ -121,14 +121,16 @@
       ><span class="ms-1 d-none d-sm-inline">Salir</span>
     </a>
   </li> -->
-  
+
 
 <div class="col-12 col-md-9 ">
-  <button class="btn btn-primary col-6 col-md-2 " *ngIf="rankingSelect && isModerator" data-bs-toggle="modal" data-bs-target="#addUsersModal">Añadir participantes</button>
-  <button class="btn btn-primary col-6 col-md-2 " *ngIf="rankingSelect && isModerator" data-bs-toggle="modal" data-bs-target="#renewJoinCodeRankingModal">Nuevo codigo</button>
-  <button class="btn btn-primary col-6 col-md-2 " *ngIf="rankingSelect && isModerator" data-bs-toggle="modal" data-bs-target="#deleteRankingModal">Eliminar ranking</button>
-
+  <button class="btn btn-primary col-6 col-md-2 bootonGestion" *ngIf="rankingSelect && isModerator" data-bs-toggle="modal" data-bs-target="#addUsersModal">Añadir participantes</button>
+  <button class="btn btn-primary col-6 col-md-2 bootonGestion" *ngIf="rankingSelect && isModerator" data-bs-toggle="modal" data-bs-target="#renewJoinCodeRankingModal">Codigo acceso</button>
+  <button class="btn btn-primary col-6 col-md-2 bootonGestion" *ngIf="rankingSelect && isModerator" data-bs-toggle="modal" data-bs-target="#deleteRankingModal">Eliminar ranking</button>
   <button class="btn btn-primary col-6 col-md-2 " *ngIf="rankingSelect && !isModerator" data-bs-toggle="modal" data-bs-target="#exitRankingModal">Salir del ranking</button>
+  
+<br>
+<br>
 
 
   <div class="row">
@@ -145,6 +147,7 @@
             [animateRows]="true"
             (cellValueChanged)="onCellValueChanged($event)"
             (onGridSizeChanged)="onGridSizeChanged($event)"
+             (rowEditingStarted)="onRowEditingStarted($event)"
             (gridReady)="onGridReady($event)"
             [overlayNoRowsTemplate]="'No hay participantes'"
             [@fadeIn]
@@ -201,10 +204,11 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h3 class="modal-title" id="renewJoinCodeRankingModal">Crear nuevo codigo para unirse</h3>
+          <h3 class="modal-title" id="renewJoinCodeRankingModal">Este codigo sirve para unirse al ranking {{nameSelect}}</h3>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
+          <h1>Codigo: {{joinCode}}</h1>
           <h4>Si renuevas el codigo de accesso el anterior no sera valido</h4>
         </div>
         <div class="modal-footer">
