al revertir accion se suman los puntos al usuario

--- a/src/app/user-ranking-dev/user-ranking-dev.component.css
+++ b/src/app/user-ranking-dev/user-ranking-dev.component.css
@@ -25,6 +25,7 @@ font: 732 47px/33px Roboto !important;
 background-color: var(--corp-color-one);
 border-color: var(--corp-color-two);
 margin-left:1rem;
+min-width: 11rem;
 }
 .sidecont {
   top: 8rem ;
