--- a/src/app/user-ranking-dev/user-ranking-dev.component.css
+++ b/src/app/user-ranking-dev/user-ranking-dev.component.css
@@ -31,7 +31,7 @@ min-width: 11rem;
   top: 8rem ;
   z-index: 1;
   max-width: 100%;
-  width: 22rem;
+  width: 28rem;
   height: 40rem;
   overflow:scroll;
 }
@@ -39,10 +39,11 @@ min-width: 11rem;
 }
 
 .ranking {
-  width: 60rem;
+  width: 79rem !important;
   height: 34rem;
-  margin-right: 1rem;
+  margin-right: -3rem;
   margin-top: 1rem;
+
   
 }
 
