--- a/src/app/user-ranking-dev/user-ranking-dev.component.html
+++ b/src/app/user-ranking-dev/user-ranking-dev.component.html
@@ -202,13 +202,8 @@
   <div class="modal fade" id="addUsersModal" tabindex="-1" aria-labelledby="addUsersModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
+        <app-chips ></app-chips>
         <div class="modal-header">
-          <h3 class="modal-title" id="addUsersModalLabel">Añadir codigo</h3>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <input type="text" id="addUsersInput" placeholder="Codigo" name="addUsersInput" #addUsersInput>
-        </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Añadir</button>
