Cambiando condicion de aparicion del boton para añadir usuarios

--- a/src/app/chips/chips.component.html
+++ b/src/app/chips/chips.component.html
@@ -57,7 +57,7 @@
       </div>
     </div>
   </div>
-  <div @fadeIn *ngIf="emails && emails.original.length > 0" class="d-grid mt-2">
+  <div @fadeIn *ngIf="emails && emails.added.length > 0" class="d-grid mt-2">
     <button
       [disabled]="emails.added.length === 0"
       class="btn btn-sm btn-outline-color"
