--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal fade" [attr.id]="uniqueId" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog shadow">
+  <div [class.modal-xl]="isLarge" class="modal-dialog shadow">
     <div class="modal-content">
       <div
         class="modal-header"
