Aplicando prettier y añadiendo loading con condicion referente a la validacion de JWT

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,6 @@
-<div class="container-fluid fullscreen bg-color">
+<loading *ngIf="!isReady"></loading>
+
+<div *ngIf="isReady" class="container-fluid fullscreen bg-color">
   <div class="ocean">
     <div class="bubble bubble-1"></div>
     <div class="bubble bubble-2"></div>
@@ -15,28 +17,14 @@
   </div>
   <div class="row position-relative align-items-center vh-100">
     <div
-      class="
-        login-card-width
-        mx-auto
-        position-absolute
-        top-40
-        start-50
-        translate-middle
-      "
+      class="login-card-width mx-auto position-absolute top-40 start-50 translate-middle"
       [@fadeIn]
     >
       <h3 class="text-light">
         <logo [animated]="false" [width]="20"></logo> | Login
       </h3>
       <div
-        class="
-          card
-          border-0 border-bottom border-5 border-color-hover
-          login-card-height
-          shadow
-          border
-          text-color
-        "
+        class="card border-0 border-bottom border-5 border-color-hover login-card-height shadow border text-color"
       >
         <form
           class="card-body d-flex flex-column"
