Cambiando app-chips pro chips

--- a/src/app/user-ranking-dev/user-ranking-dev.component.html
+++ b/src/app/user-ranking-dev/user-ranking-dev.component.html
@@ -276,7 +276,7 @@
 
   <modal [title]="'Agregar usuarios al ranking'" [uniqueId]="'addUsersModal'" [isLarge]="true">
     <div class="modal-body">
-      <app-chips *ngIf="idSelect" [idRanking]="idSelect"></app-chips>
+      <chips *ngIf="idSelect" [idRanking]="idSelect"></chips>
     </div>
   </modal>
 
