Cambiando errores por validador dinamico

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -38,29 +38,17 @@
             placeholder="Introduce tu email"
             class="form-control text-color"
           />
-          <div *ngIf="loginForm.controls.errors">
-            <div *ngIf="loginForm.controls.email.errors">
-              <small
-                [@fadeIn]
-                class="text-danger"
-                *ngIf="loginForm.controls.email.errors['pattern']"
-                ><i class="bi bi-x me-2"></i>El formato del email es
-                incorrecto.</small
-              >
-              <small
-                [@fadeIn]
-                class="text-danger"
-                *ngIf="
-                  loginForm.controls.email.touched &&
-                  loginForm.controls.email.errors['required']
-                "
-                ><i class="bi bi-x me-2"></i>Este campo es obligatorio.</small
-              >
-            </div>
-            <div *ngIf="!loginForm.controls.email.errors">
-              <small [@fadeIn] class="text-success"
-                ><i class="bi bi-check-lg me-2"></i>El correo es válido.</small
-              >
+          <div>
+            <validator
+              [isTouched]="true"
+              [ctrl]="loginForm.get('email')"
+            ></validator>
+          </div>
+          <div *ngIf="!loginForm.controls['email'].errors">
+            <div class="d-grid mt-1">
+              <small @fadeIn class="text-success"
+                ><i class="bi bi-check-lg me-1"></i>El correo es válido.
+              </small>
             </div>
           </div>
           <label class="mt-3" for="password">Password</label>
@@ -70,32 +58,18 @@
             placeholder="Introduce tu contraseña"
             class="form-control text-color"
           />
-          <div *ngIf="loginForm.controls.password.errors">
-            <small
-              [@fadeIn]
-              class="text-danger"
-              *ngIf="
-                loginForm.controls.password.touched &&
-                loginForm.controls.password.errors['minlength']
-              "
-              ><i class="bi bi-x me-2"></i>La longitud debe ser de 8
-              caracteres.</small
-            >
-            <small
-              [@fadeIn]
-              class="text-danger"
-              *ngIf="
-                loginForm.controls.password.touched &&
-                loginForm.controls.password.errors['required']
-              "
-              ><i class="bi bi-x me-2"></i>Este campo es obligatorio.</small
-            >
+          <div>
+            <validator
+              [isTouched]="true"
+              [ctrl]="loginForm.get('password')"
+            ></validator>
           </div>
-          <div *ngIf="!loginForm.controls.password.errors">
-            <small [@fadeIn] class="text-success"
-              ><i class="bi bi-check-lg me-2"></i>La contraseña es
-              válida.</small
-            >
+          <div *ngIf="!loginForm.controls['password'].errors">
+            <div class="d-grid mt-1">
+              <small @fadeIn class="text-success"
+                ><i class="bi bi-check-lg me-1"></i>El formato es válido.
+              </small>
+            </div>
           </div>
           <div class="d-grid mt-3">
             <button
@@ -108,7 +82,7 @@
           </div>
           <hr class="my-1 border-danger" />
           <div class="d-flex justify-content-center mt-3">
-            <button class="btn bg-info btn-color text-light mx-1">
+            <button class="btn bg-info btn-color text-light mx-1" disabled>
               <i class="bi bi-twitter"></i>
             </button>
             <button class="btn bg-danger btn-color text-light mx-1" disabled>
